<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Standalone project: the repository root aggregates it but is NOT its parent.
       <relativePath/> is required — without it Maven would look for the parent at ../pom.xml. -->
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.1</version>
    <relativePath />
  </parent>

  <groupId>com.roucoux.cairn</groupId>
  <artifactId>cairn-domain</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>cairn-domain</name>
  <description>Business domain: model, ports and use case implementations — framework-free</description>

  <properties>
    <java.version>25</java.version>
    <jacoco-maven-plugin.version>0.8.15</jacoco-maven-plugin.version>
    <spotless-maven-plugin.version>3.10.2</spotless-maven-plugin.version>
    <palantir-java-format.version>2.96.0</palantir-java-format.version>
  </properties>

  <!-- ZERO compile-scope dependencies: pure Java, no Spring, no JPA. This is the strongest
       guarantee in the hexagon — nothing on this module's classpath to accidentally depend on —
       and the application module's ArchUnit tests check the same rule again once everything is
       assembled. -->
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!-- The quality block below is intentionally identical in every module: without a shared
       parent, self-containedness is what lets a module move to its own repository. Keep the
       copies in sync — see AGENTS.md. No Failsafe here: the domain has no *IT tests. -->
  <build>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless-maven-plugin.version}</version>
        <configuration>
          <java>
            <palantirJavaFormat>
              <version>${palantir-java-format.version}</version>
            </palantirJavaFormat>
            <removeUnusedImports />
            <formatAnnotations />
          </java>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>check-coverage</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <!-- Intentionally lower than the starter's actual coverage, so apps
                           generated from it are not blocked from day one. -->
                      <minimum>0.70</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
